--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "db:push": "prisma db push"
   },
   "dependencies": {
+    "@prisma/client": "^3.15.0",
+    "@stitches/react": "^1.2.8",
+    "copy-to-clipboard": "^3.3.1",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
